# MaxStas

./: .gitignore  CMakeLists.txt  Main.java  Test1.cpp
Inf_Laboratory_work/Lab_work_1/: Tasks_1.cpp
Inf_Laboratory_work/Lab_work_2/: client.sh  even_numbers.sh  running_processes.sh  server.sh
Inf_Laboratory_work/Lab_work_2_V4/: multiply.sh  running_processes.sh  server.sh
Inf_Laboratory_work/Lab_work_3_V3/: 1_zap.sql  2_zap.sql  3_zap.sql  4_zap.sql  Tasks.sql
Inf_Laboratory_work1/: Tasks_2.cpp
Infa_DZ2/: Task.cpp  home_state.txt
Infa_RK2/: Task_1.sql  Task_2.cpp  Task_6.2.cpp
Laboratory_work_4_V3/: CMakeLists.txt
Laboratory_work_4_V3/MySqlScript/: S1.sql
Laboratory_work_4_V3/src/: main.cpp
OAuP_Laboratory_work/: Task.cpp
OAuP_Laboratory_work/Lab_work_2/: Task_V4.cpp
OAuP_Laboratory_work/Lab_work_3/: Tasks_V3.cpp  menu.txt  output.txt
OAuP_RK2/: Tasks.cpp  city.txt
OAuP_Tasks/Seminar_2/: Tasks_arrays.cpp
OAuP_Tasks/Seminar_3/: Tasks_arrays.cpp  Tasks_geom.cpp
OAuP_Tasks/Seminar_4/: Tasks_matrices_fail.cpp  Tasks_matrices_preza.cpp
OAuP_Tasks/Seminar_5/: Tasks.cpp
OAuP_Tasks/Seminar_6/: Tasks.cpp
OAuP_Tasks/Seminar_7/: Task.cpp
src/: main.cpp
